# Farmenv-AI

./: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py
static/: script.js
templates/: index.html
