[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farmenv-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "openai",
    "flask",
    "flask-cors",
    "numpy",
    "requests",
    "gunicorn",
]

[project.scripts]
server = "app:app"
